--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,7 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
   host: localhost
+  port: 5432
 
 development:
   <<: *default
